# RustaceanMarket

server/: Cargo.toml
server/migrations/: 0001_rustacean_table.sql
server/src/: main.rs
server/src/api/: carts.rs  mod.rs  orders.rs  products.rs  users.rs
