[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }

# dependencies for auth
actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"